--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@commitlint/config-conventional": "^7.0.1",
     "@commitlint/config-lerna-scopes": "^7.0.0",
     "@commitlint/travis-cli": "^7.0.0",
+    "@semantic-release/changelog": "^2.1.1",
+    "@semantic-release/git": "^6.0.1",
     "@types/react-native": "^0.46.7",
-    "typescript": "^2.4.2",
-    "semantic-release": "^15.6.0"
+    "semantic-release": "^15.6.0",
+    "typescript": "^2.4.2"
   },
   "homepage": "https://github.com/brandingbrand/react-native-adobe-marketing-cloud#readme",
   "license": "MIT",
@@ -29,5 +31,24 @@
     "commitmsg": "commitlint -e $GIT_PARAMS"
   },
   "types": "./typings/index.d.ts",
-  "version": "0.0.2"
+  "version": "0.0.2",
+  "release": {
+    "verifyConditions": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ],
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/git",
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ]
+  }
 }
